Modification of title in index.html file

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>03 - Git : undo !</title>
   </head>
   <body>
   
